# piper-phonemize

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_docker.sh  clean.sh  requirements.txt  run.sh  setup.py
piper_phonemize/: __init__.py
